# Orchestration_LM_BF

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  download_easyocr_models.py  hpa.yaml  pyproject.toml  requirements.txt  service.yaml  stress_test.py  upload_to_roboflow test.py  upload_to_roboflow.py  upload_to_roboflow_valid.py
.github/workflows/: ci.yml
conf/base/: catalog.yml  parameters.yml  parameters_OCRtesseract.yml  parameters_detectionYOLO.yml  parameters_evaluateModelAPI.yml  parameters_evaluateYOLO.yml  parameters_ocrAPI.yml
k8s/: deployment.yaml  hpa.yaml  service.yaml
runs/detect/train10/: args.yaml
runs/detect/train11/: args.yaml  results.csv
src/orchestration_lm_bf/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/orchestration_lm_bf/datasets/: yolo_model_dataset.py
src/orchestration_lm_bf/pipelines/LoadDataKaggle/: __init__.py  nodes.py  pipeline.py
src/orchestration_lm_bf/pipelines/OCRtesseract/: __init__.py  nodes.py  pipeline.py
src/orchestration_lm_bf/pipelines/detectionYOLO/: nodes.py  pipeline.py
src/orchestration_lm_bf/pipelines/evaluateModelAPI/: __init__.py  nodes.py  pipeline.py
templates/: index.html
tests/: conftest.py  test_main.py  test_registry.py
tests/pipelines/LoadDataKaggle/: test_pipeline.py
tests/pipelines/OCRtesseract/: test_pipeline.py
tests/pipelines/detectionYOLO/: test_pipeline.py
tests/pipelines/evaluateModelAPI/: test_pipeline.py
tests/pipelines/evaluateYOLO/: test_pipeline.py
tests/pipelines/ocrAPI/: test_pipeline.py
(+6 files in other folders)
